--- a/index.html
+++ b/index.html
@@ -303,6 +303,12 @@
                 </a>
               </span>
               <span class="link-block">
+                <a href="topkids/visualization/png/all.html"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span>TOPKIDS</span>
+                </a>
+              </span>
+              <span class="link-block">
                 <a href="smal/visualization/png/all.html"
                    class="external-link button is-normal is-rounded is-dark">
                   <span>SMAL</span>
